--- a/console.html
+++ b/console.html
@@ -16,7 +16,14 @@
   <main>
     <h2>Code</h2>
     <textarea id="code"></textarea>
-    <p><button id="execute">Execute</button></p>
+    <p>
+      <button id="execute">Execute</button>
+      Triggers:
+      <button id="buttonA" class="trigger">A</button>
+      <button id="buttonB" class="trigger">B</button>
+      <button id="buttonC" class="trigger">C</button>
+      <button id="buttonD" class="trigger">D</button>
+    </p>
     <h2>Output</h2>
     <pre id="output"></pre>
   </main>
