--- a/console.html
+++ b/console.html
@@ -33,6 +33,24 @@
   <script src="scripts/jquery-2.1.0.js"></script>
   <script src="scripts/eval.js"></script>
   <script src="scripts/ldf-client-browser.js"></script>
+  <script>
+  prefixes = {
+    "rdf":         "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
+    "rdfs":        "http://www.w3.org/2000/01/rdf-schema#",
+    "owl":         "http://www.w3.org/2002/07/owl#",
+    "skos":        "http://www.w3.org/2004/02/skos/core#",
+    "xsd":         "http://www.w3.org/2001/XMLSchema#",
+    "dc":          "http://purl.org/dc/terms/",
+    "dcterms":     "http://purl.org/dc/terms/",
+    "dc11":        "http://purl.org/dc/elements/1.1/",
+    "foaf":        "http://xmlns.com/foaf/0.1/",
+    "geo":         "http://www.w3.org/2003/01/geo/wgs84_pos#",
+    "dbpedia":     "http://dbpedia.org/resource/",
+    "dbpedia-owl": "http://dbpedia.org/ontology/",
+    "dbpprop":     "http://dbpedia.org/property/",
+    "schema":      "http://schema.org/"
+  };
+  </script>
 </body>
 </html>
 
