--- a/console.html
+++ b/console.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1><a href="/">Linked Data Fragments</a></h1>
+    <h1>Linked Data Fragments</h1>
     <figure class="logo">
       <a href="http://linkeddatafragments.org/"><img src="images/ldf.svg" alt="Linked Data Fragments" /></a>
     </figure>
@@ -19,10 +19,10 @@
     <p>
       <button id="execute">Execute</button>
       Triggers:
-      <button id="buttonA" class="trigger">A</button>
-      <button id="buttonB" class="trigger">B</button>
-      <button id="buttonC" class="trigger">C</button>
-      <button id="buttonD" class="trigger">D</button>
+      <button id="buttonA" class="trigger" disabled>A</button>
+      <button id="buttonB" class="trigger" disabled>B</button>
+      <button id="buttonC" class="trigger" disabled>C</button>
+      <button id="buttonD" class="trigger" disabled>D</button>
     </p>
     <h2>Output</h2>
     <pre id="output"></pre>
