--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Triple Pattern Fragments Federation <em>Tutorial</em></h1>
+    <h1>Triple Pattern Fragments<br><em>Interactive Tutorial</em></h1>
     <figure class="logo">
       <a href="http://linkeddatafragments.org/"><img src="images/ldf.svg" alt="Linked Data Fragments" /></a>
     </figure>
